# emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
deserted/: ppu-memory.h  ppu-reg.h  ppu.h
deserted/ppu/: ppu-memory.cpp  ppu-palette.cpp  ppu.cpp
difftest/: cputestlog.txt
inc/: apu-regs.h  apu.h  configs.h  cpu.h  cpu_datas.h  input_manager.h  joystick.h  memory.h  mmu.h  nes.h  ppu-memory.h  ppu-reg.h  ppu.h  rom.h  rom.md
rom-fix/: mario-bros.nes  zelda1.nes
src/: cpu.c  cpu_exec.c  input_manager.cpp  main.c  main.cpp  mapper.c  memory.c  nes-rom.c  nes-rom.cpp  nes.c  nes.cpp  ppu-memory.c  ppu-reg-interface.c  ppu.c
src/core/: apu.cpp  cpu.c  cpu.cpp  cpu_exec.c  cpu_exec.cpp  input_manager.cpp  mapper.c  mapper.cpp  memory.cpp  mmu.cpp
src/core/APU/: apu.cpp  pulse.cpp
src/core/ppu/: ppu-memory.c  ppu-palette.c  ppu-reg-interface.cpp  ppu.c  render.c
src/core/ppu-cxx/: ppu-exec.cpp  ppu-reg-handlers.cpp  ppu.cpp  ppu.h
